feat:(backend): add User, Role and Token entities